--- a/Homework/boilerplate/Makefile
+++ b/Homework/boilerplate/Makefile
@@ -1,8 +1,8 @@
-CXX ?= g++
+CXX = mipsel-linux-gnu-g++
 LAB_ROOT ?= ../..
-BACKEND ?= LINUX
+BACKEND ?= CPU
 CXXFLAGS ?= --std=c++11 -I $(LAB_ROOT)/HAL/include -DROUTER_BACKEND_$(BACKEND)
-LDFLAGS ?= -lpcap
+LDFLAGS ?= # -lpcap
 
 .PHONY: all clean
 all: boilerplate
@@ -10,10 +10,21 @@ all: boilerplate
 clean:
 	rm -f *.o boilerplate std
 
+%.s: %.cpp
+	$(CXX) $(CXXFLAGS) -S $^ -o $@
+
+hal.s: $(LAB_ROOT)/HAL/src/cpu/router_hal.c # $(LAB_ROOT)/HAL/src/cpu/platform/standard.h
+	$(CXX) $(CXXFLAGS) -S $< -o $@
+
+s: main.s hal.s protocol.s checksum.s lookup.s forwarding.s
+
+# boilerplate.s: main.i hal.i protocol.i checksum.i lookup.i forwarding.i
+# 	$(CXX) $^ -S -o $@ $(LDFLAGS) 
+
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $^ -o $@
 
-hal.o: $(LAB_ROOT)/HAL/src/linux/router_hal.cpp $(LAB_ROOT)/HAL/src/linux/platform/standard.h
+hal.o: $(LAB_ROOT)/HAL/src/cpu/router_hal.c # $(LAB_ROOT)/HAL/src/cpu/platform/standard.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 boilerplate: main.o hal.o protocol.o checksum.o lookup.o forwarding.o
