makefile of linux

--- a/Homework/boilerplate/Makefile.linux
+++ b/Homework/boilerplate/Makefile.linux
@@ -1,8 +1,8 @@
 CXX ?= g++
 LAB_ROOT ?= ../..
 BACKEND ?= LINUX
-CXXFLAGS ?= --std=c++11 -I $(LAB_ROOT)/HAL/include -DROUTER_BACKEND_$(BACKEND)
-LDFLAGS ?= -lpcap -DDEBUG
+CXXFLAGS ?= --std=c++11 -I $(LAB_ROOT)/HAL/include -DROUTER_BACKEND_$(BACKEND) -DDEBUG
+LDFLAGS ?= -lpcap
 
 .PHONY: all clean
 all: boilerplate
